// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 1`] = `
Array [
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "1",
        "root": "2",
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "0",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 2,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "3",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 3,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "2",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "4",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 2`] = `
Array [
  Object {
    "author": Object {
      "did": "0",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "1",
        "root": "1",
      },
      "text": "hear that",
    },
    "replyCount": 1,
    "repostCount": 0,
    "uri": "0",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bobby boy here",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "2",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bob back at it again!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "3",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 3`] = `
Array [
  Object {
    "author": Object {
      "did": "0",
      "name": "dan.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": "0",
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Array [
            0,
            18,
          ],
          "type": "mention",
          "value": "0",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "repostedBy": Object {
      "did": "1",
      "name": "carol.test",
    },
    "uri": "0",
  },
  Object {
    "author": Object {
      "did": "1",
      "name": "carol.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "2",
        "root": "2",
      },
      "text": "of course",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "1",
  },
  Object {
    "author": Object {
      "did": "1",
      "name": "carol.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "3",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 4`] = `
Array [
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 3,
    "myState": Object {
      "like": "0",
      "repost": "0",
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "repostedBy": Object {
      "did": "1",
      "name": "dan.test",
    },
    "uri": "0",
  },
  Object {
    "author": Object {
      "did": "1",
      "name": "dan.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Array [
            0,
            18,
          ],
          "type": "mention",
          "value": "0",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "1",
  },
  Object {
    "author": Object {
      "did": "1",
      "name": "dan.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "dan here!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "2",
  },
]
`;

exports[`pds author feed views reflects fetching user's state in the feed. 1`] = `
Array [
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": "1",
        "root": "2",
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "0",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 2,
    "myState": Object {
      "like": "0",
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "3",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 3,
    "myState": Object {
      "like": "1",
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "2",
  },
  Object {
    "author": Object {
      "did": "0",
      "displayName": "ali",
      "name": "alice.test",
    },
    "cursor": "1970-01-01T00:00:00.000Z",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "likeCount": 0,
    "myState": Object {
      "like": undefined,
      "repost": undefined,
    },
    "record": Object {
      "$type": "todo.social.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "4",
  },
]
`;
